# Django_LMS

./: .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  tasks.py
.circleci/: config.yml
assigments/: apps.py  models.py
assignments/: admin.py  models.py
assignments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py
client/: Dockerfile  components.json  package-lock.json  package.json
client/src/: App.jsx  App.tsx
client/src/components/: ProtectedRoute.jsx
client/src/context/: AuthContext.jsx
client/src/pages/: Course.jsx  Courses.jsx  Dashboard.tsx  Homepage.jsx  Lecture.jsx  Lectures.jsx  Login.tsx  LoginPage.jsx
client/src/schemas/: authSchema.ts  coursesSchema.ts
client/src/services/: api.js  (+1 more)
course/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
course/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
group/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
group/migrations/: 0001_initial.py  0002_initial.py  0003_rename_course_number_group_year_number.py
lesson/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
lesson/migrations/: 0001_initial.py  0002_initial.py
lms/: settings.py  urls.py
nginx/: Dockerfile  entrypoint.sh  nginx.conf
nginx/conf.d/: http.conf
nginx/templates/: https.conf
task/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
task/migrations/: 0001_initial.py
user/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
(+15 files in other folders)
